# onnx-101

./: LICENSE.md  README.md  pyproject.toml
onnx_workshop/: mnist.py
ort-web-api/: README.md  index.js  package-lock.json  package.json
src/: inference.py  mnist.py
