[tool.poetry]
name = "onnx-workshop"
version = "0.1.0"
description = ""
authors = ["Aleksandar Ivanovski <aleksandar@ivanovski.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "onnx_workshop"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
onnx = "^1.14.0"
onnxruntime = "^1.15.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.277"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
